# eml2pst

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
eml2pst/: NOTICE  cli.py  crc.py  eml_parser.py  pst_file.py  utils.py
eml2pst/ltp/: bth.py  heap.py  pc.py  tc.py
eml2pst/mapi/: properties.py
eml2pst/messaging/: folder.py  message.py  store.py
eml2pst/ndb/: amap.py  block.py  btree.py  header.py  subnode.py  xblock.py
tests/: test_pst_ndb_signatures.py
