[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eml2pst"
version = "0.1.0"
description = "Write Microsoft PST (Personal Storage Table) files from Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chris King", email = "cking91977@gmail.com" },
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/TremendousTurtle/eml2pst"
Issues = "https://github.com/TremendousTurtle/eml2pst/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["eml2pst"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]

[tool.ruff.lint]
